--- a/CSS/typo.css
+++ b/CSS/typo.css
@@ -6,6 +6,21 @@ h1{
 main{
     font-size: 1.5rem;
 }
+p{
+    padding: 3px;
+    /* font-family: monospace; */
+    /* font-family: sans-serif; */
+    /* font-style: italic; */
+    /* font-weight: bold; */
+    /* line-height: 3;
+    letter-spacing: 5px;
+    word-spacing: 30px; */
+    /* text-indent: 2em; */
+    /* text-transform: lowercase;
+    text-transform: uppercase; */
+    /* text-decoration: underline; */
+    /* text-transform: capitalize; */
+}
 input, button{
-    font-size: inherit;
+    font: inherit;
 }
