--- a/CSS/fle.css
+++ b/CSS/fle.css
@@ -22,12 +22,31 @@ body{
     /* flex-direction: column; */
     /* flex-direction: column-reverse; */
     /* flex-direction: row-reverse; */
+    /* flex-wrap: wrap; */
+    flex-flow: row wrap;
+    align-content: center;
+    /* align-content: space-evenly; */
+    /* align-content: flex-end; */
+    /* align-content: flex-start; */
 }
 .box{
     color: white;
     font-size: 2rem;
     height: 100px;
-    min-width: 100px;
+    /* min-width: 100px; */
     background-color: black;
     padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 150px;
+    /* flex-grow: 1; */
+    /* flex-shrink: 1; */
+    /* flex-basis: 250px; */
+}
+.box:nth-child(2){
+    flex: 2 2 150px;
+    order: 1;
+    /* flex-grow: 2; */
+    /* flex-shrink: 2; */
 }
